[project]
name = "crypto_helper"
version = "0.3.0"
description = "Wrapper module to use the wonderful cryptography package in an easier way."
keywords = ["ec", "rsa", "ecdsa", "pki", "ed25519", "x509", "x.509", "cert", "crl", "csr",
    "signing", "encryption", "decryption", "encrypt", "decrypt"]
readme = "README.md"
authors = [
    { name = "sausix" }
]
requires-python = ">=3.9"
dependencies = [
    "cryptography==45.0.5",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-local-variables",
]
